# CaptureCardGaming

./: Cargo.toml
src/: app.rs  audio.rs  main.rs  pixel.rs  render.rs  types.rs
src/platform/: linux.rs  mod.rs  windows.rs
