[package]
name = "CaptureCardGaming"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.25.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
jpeg-decoder = "0.3.2"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
v4l = "0.14.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_UI_Shell_PropertiesSystem",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false